# django-boards

./: README.md  pyproject.toml
boards/: views.py
myproject/: settings.py
