[tool.poetry]
name = "django-boards"
version = "0.1.0"
description = "A discussion board (forum) where users can start a new discussion by creating a new topic or engage in a discussion by posting replies."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
